replays/errorlog-20181106-182756-0500-1541546876-32-32-0.log

Turn 1
================================================================
error: communication error with bot: Problem writing to pipe, errno was: 0 (No error)
Last input received was:

    if (ship.halite_amount > 750) and not game_map[me.shipyard.position].is_occupied:
    ^
IndentationError: expected an indented block

